# cellular-evolution-cpp

./: .gitignore  CMakeLists.txt  README.md
cfg/: cell_config.txt  cities_config.txt  coverage_config.txt  evo_simple_config.txt  floor_plan_config.txt  func_config.txt  img_config.txt  salesman_config.txt
data/: points.csv
examples/bitmap_write/: main.cpp
examples/coverage/: coverage_data.h  coverage_ind.h  main.cpp
examples/evolution_simple/: main.cpp  test_ind.h  test_ind_data.h
examples/expression_tree/: constant.cpp  constant.h  exp_data.h  exp_individual.h  expression.cpp  expression.h  function.h  main.cpp  operation.cpp  operation.h  variable.cpp  variable.h
examples/floor_planning/: fp_data.h  fp_individual.h  main.cpp  rectangle.h
examples/funtree/: constant.cpp  constant.h  expression.cpp  expression.h  fun_data.h  fun_individual.h  function.cpp  function.h  main.cpp  operation.cpp  operation.h  tree_variable.cpp  tree_variable.h
examples/image_shapes/: img_data.h  img_individual.h  main.cpp  shape.h
examples/salesman/: main.cpp  s_individual.h  sa_data.h
examples/vari_reg_example/: main.cpp
include/cellular-evolution/cevo/: ind_data.h  individual.h  pop_config.h  population.h
include/cellular-evolution/floor_planning/: fp_individual.h  rectangle.h
include/cellular-evolution/utilities/: bitmap.hpp  evo_utils.h  random.h
include/cellular-evolution/varireg/: variable.h  varireg.h
